some renaming and added two sample programs for capturing and playbakc using ALSA

--- a/video_audio_proc/CMakeLists.txt
+++ b/video_audio_proc/CMakeLists.txt
@@ -9,37 +9,58 @@ find_package(SDL2_image REQUIRED)
 find_package(Threads REQUIRED)
 
 include_directories(
+  include
   3rdparty/include
   ${SDL2_INCLUDE_DIRS}
   ${SDL2_IMAGE_INCLUDE_DIRS}
   )
 
-add_executable(v4l_sdl_stream
-  src/v4l_sdl.cpp
+add_executable(v4l2_ndi_send
+  src/v4l2_ndi_send.cpp
 )
 
-target_link_libraries(v4l_sdl_stream
+target_link_libraries(v4l2_ndi_send
   ${SDL2_LIBRARIES}
   ${SDL2_IMAGE_LIBRARIES}
   ${CMAKE_SOURCE_DIR}/3rdparty/lib/x86_64-linux-gnu/libndi.so
 )
 
 
-add_executable(ndi_recv
-  src/ndi_recv.cpp
+add_executable(ndi_video_recv
+  src/ndi_video_recv.cpp
 )
 
-target_link_libraries(ndi_recv
+target_link_libraries(ndi_video_recv
   ${SDL2_LIBRARIES}
   ${SDL2_IMAGE_LIBRARIES}
   ${CMAKE_SOURCE_DIR}/3rdparty/lib/x86_64-linux-gnu/libndi.so
 )
 
-add_executable(audio_proc
-  src/audio_proc.cpp
+# add_executable(ma
+#   src/audio_proc.cpp
+# )
+# target_link_libraries(audio_proc
+#   m
+#   pthread
+#   libdl.so
+# )
+
+add_executable(alsa_capture
+  src/alsa_capture.c
 )
-target_link_libraries(audio_proc
-  m
-  pthread
-  libdl.so
+
+target_link_libraries(alsa_capture
+  libasound.so
 )
+
+file(GLOB audio_test RELATIVE ${CMAKE_SOURCE_DIR} "src/audio_*.c")
+foreach(test_src ${audio_test})
+  get_filename_component(target ${test_src} NAME_WE)
+  message(${target})
+  add_executable(${target}
+    ${test_src}
+  )
+  target_link_libraries(${target}
+    libasound.so 
+  )
+endforeach()
