--- a/video_audio_proc/CMakeLists.txt
+++ b/video_audio_proc/CMakeLists.txt
@@ -35,11 +35,11 @@ target_link_libraries(alsa_ndi_send
 )
 
 
-add_executable(ndi_video_recv
-  src/ndi_video_recv.cpp
+add_executable(ndi_recv
+  src/ndi_recv.cpp
 )
 
-target_link_libraries(ndi_video_recv
+target_link_libraries(ndi_recv
   ${SDL2_LIBRARIES}
   ${SDL2_IMAGE_LIBRARIES}
   ${CMAKE_SOURCE_DIR}/3rdparty/lib/x86_64-linux-gnu/libndi.so
