--- a/video_audio_proc/configs/blackmagic.config
+++ b/video_audio_proc/configs/blackmagic.config
@@ -4,4 +4,5 @@ dev_name = "/dev/video0"
 fmt_width = 1920
 fmt_height = 1080
 fps = 60
-output_name = "Main Black Magic"
+snd_name = "plughw:0,0"
+output_name = "main"
