fixed bugs in ndi_send

--- a/video_audio_proc/configs/nexigo.config
+++ b/video_audio_proc/configs/nexigo.config
@@ -1,7 +1,9 @@
 # application config file for Black Magic camera
 
-dev_name = "/dev/video3"
+dev_name = "/dev/video2"
 fmt_width = 1920
 fmt_height = 1080
-fps = 60
-output_name = "Nexigo"
+fps = 30
+snd_name = "plughw:2,0"
+output_name = "nexigo"
+
