added pulseaudio to support bluetooth and resolving resource conflict issue

--- a/video_audio_proc/CMakeLists.txt
+++ b/video_audio_proc/CMakeLists.txt
@@ -17,6 +17,8 @@ pkg_check_modules(_FFMPEG_AVFORMAT libavformat)
 pkg_check_modules(_FFMPEG_AVCODEC libavcodec)
 pkg_check_modules(_FFMPEG_AVUTIL libavutil)
 pkg_check_modules(_FFMPEG_SWSCALE libswscale)
+pkg_check_modules(_PULSEAUDIO_SIMPLE REQUIRED libpulse-simple)
+pkg_check_modules(_PULSEAUDIO REQUIRED libpulse)
 # pkg_check_modules(_PC_X264 x264)
 endif (PKG_CONFIG_FOUND)
 
@@ -58,6 +60,18 @@ add_executable(ndi_recv
 
 target_link_libraries(ndi_recv
   libasound.so
+  ${SDL2_LIBRARIES}
+  ${SDL2_IMAGE_LIBRARIES}
+  ${CMAKE_SOURCE_DIR}/3rdparty/lib/x86_64-linux-gnu/libndi.so
+)
+
+add_executable(ndi_recv_pa
+  src/ndi_recv_pa.cpp
+)
+
+target_link_libraries(ndi_recv_pa
+  pulse
+  pulse-simple
   ${SDL2_LIBRARIES}
   ${SDL2_IMAGE_LIBRARIES}
   ${CMAKE_SOURCE_DIR}/3rdparty/lib/x86_64-linux-gnu/libndi.so
