--- a/video_audio_proc/CMakeLists.txt
+++ b/video_audio_proc/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12.0)
 project(video_audio_proc C CXX)
 
-add_compile_options(-std=c++11 -o-O20 -Wall)
+add_compile_options(-std=c++11 -O2 -Wall)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 set(CMAKE_BUILD_TYPE RelWithDebInfo)
 
