--- a/video_audio_proc/3rdparty/ndi/bin/config/ndi-config.v1.json
+++ b/video_audio_proc/3rdparty/ndi/bin/config/ndi-config.v1.json
@@ -16,7 +16,7 @@
             }
         },
         "networks": {
-            "discovery": "",
+            "discovery": "10.180.2.113",
             "ips": ""
         },
         "tcp": {
