--- a/video_audio_proc/CMakeLists.txt
+++ b/video_audio_proc/CMakeLists.txt
@@ -63,15 +63,15 @@ target_link_libraries(alsa_ndi_send
   rt
 )
 
-add_executable(pa_ndi_send
-  src/pa_ndi_send.cpp
-)
+# add_executable(pa_ndi_send
+#   src/pa_ndi_send.cpp
+# )
 
-target_link_libraries(pa_ndi_send
-  pulse
-  pulse-simple
-  ${CMAKE_SOURCE_DIR}/3rdparty/ndi/lib/x86_64-linux-gnu/libndi.so
-)
+# target_link_libraries(pa_ndi_send
+#   pulse
+#   pulse-simple
+#   ${CMAKE_SOURCE_DIR}/3rdparty/ndi/lib/x86_64-linux-gnu/libndi.so
+# )
 
 add_executable(ndi_recv
   src/ndi_recv.cpp
